# Yobboy-keyboard

./: .gitignore  DMA_NVS_CONFIG_GUIDE.md  KEYBOARD_LAYOUT.md  PROJECT_SUMMARY.md  README.md  README.zh-CN.md  WEB_SERIAL_CONFIG_PROTOCOL.md  keyboard.stl  keyboard_layout_raw.json  keyboardright.stl  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: deploy-pages.yml
.playwright-mcp/: page-2026-06-08T12-44-10-211Z.yml
Designref/: DESIGN.md  ref.html
main/: CMakeLists.txt  Kconfig  config_protocol.c  hc165.c  idf_component.yml  key_bind.c  keyboard_ble_config_service.c  keyboard_ble_hid.c  keyboard_input.c  keyboard_layout_meta.c  keyboard_lighting_topology.c  keyboard_power.c  keyboard_power_policy.c  keyboard_profile.c  keyboard_transport.c  led.c  led_strip_test_main.c  nvs_config.c  tusb_hid_example_main.c
main/include/: config_protocol.h  hc165.h  key_bind.h  keyboard_ble_config_service.h  keyboard_ble_hid.h  keyboard_input.h  keyboard_layout_meta.h  keyboard_lighting_topology.h  keyboard_power.h  keyboard_power_policy.h  keyboard_profile.h  keyboard_transport.h  led.h  lightmap.h  nvs_config.h  usb_descriptors.h
main/lamp_array/: lamp_array_matrix.c  lamp_array_matrix.h  pixel.c  pixel.h
tools/: serve_configurator.py
web-config/: app.js  index.html  keycodes.js  layout.js  protocol.js  styles.css
